stderr
JudgeMan.java:126: error: class, interface, enum, or record expected
}
^
1 error
